# PaperManthan

./: .gitignore  CLAUDE.md  Project_Brief.md
apps/api/: pyproject.toml
apps/api/src/socratic/: config.py  main.py
apps/web/src/app/: page.tsx
build-playbook/: BUILD_PLAYBOOK.md
build-playbook/milestones/: 00-foundation-day.md  01-hello-mentor.md  02-the-mentor-agent.md  03-grader-and-eval.md  04-through-08-remaining.md
build-playbook/reference/: ai-agent-prompt.md  narrative-template.md  stub-files.md
