[project]
name = "papermanthan-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "lan>=0.0.2",
    "langfuse>=2.0.0,<3.0.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
]
